stop gap

--- a/src/components/common/Composite/composite.scss
+++ b/src/components/common/Composite/composite.scss
@@ -1,6 +1,11 @@
 .j {
-  &-thumbnail {
+  &-mobThumb {
     width: 100px;
+    height: 300px;
+    overflow: hidden;
+  }
+  &-deskThumb {
+    max-width: 500px;
     height: 300px;
     overflow: hidden;
   }
