--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -34,9 +34,13 @@ ul {
     font-size: 1.5em;
     text-align: center;
   }
-  &-modal {
-    text-align: center;
-    max-width: 200px;
+  &-modalMobile {
+    max-width: 300px;
     margin: 1.75rem auto;
+  }
+  &-modalDesktop {
+    text-align: center;
+    max-width: 800px;
+    margin: 2rem auto;
   }
 }
